--- a/Assignment-2/YT-Music-files/styles/main-content.css
+++ b/Assignment-2/YT-Music-files/styles/main-content.css
@@ -1,13 +1,18 @@
+/* CSS Code for Main Contect of YouTube Music Page */
+
+/* Body of page CSS Code */
 body {
     font-family: Roboto, Arial;
     padding: 100px 60px 0px 120px;
 }
 
+/* Audio on page CSS Code */
 .main-content-audio {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
+/* Main audio contect left and right section CSS Code */
 .main-content-audio .left-section,
 .main-content-audio .right-section {
     padding: 100px;
@@ -18,7 +23,7 @@ body {
     align-items: center;
 }
 
-
+/* Audio image CSS Code*/
 .audio-image img{
     width: 500px;
     height: 500px;
@@ -50,6 +55,7 @@ audio {
 
 }
 
+/* Audio Sort Button CSS Code */
 .audio-sort button{
     background-color: rgb(214, 214, 214);
     border: none;
@@ -61,6 +67,7 @@ audio {
 
 }
 
+/* Audio Navigation Button CSS Code */
 .audio-navigation button {
     background-color: rgb(245, 245, 245);
     flex: 1;
@@ -73,6 +80,7 @@ audio {
 
 }
 
+/* Audion recomendation CSS Code */
 .audio-recomendation {
     display: flex;
     flex-direction: column;
