--- a/Assignment-1/styles/top-bar.css
+++ b/Assignment-1/styles/top-bar.css
@@ -1,3 +1,6 @@
+/* CSS Code for Top Bar of College admission Page */
+
+/* Top Bar CSS Code */
 .top-bar {
     display: flex;
     justify-content: space-between;
@@ -12,6 +15,7 @@
     top: 0;
 }
 
+/* Right Side CSS code */
 .right-side {
     width: 600px;
     display: flex;
