--- a/Assignment-2/youtube-files/styles/top-bar.css
+++ b/Assignment-2/youtube-files/styles/top-bar.css
@@ -1,3 +1,6 @@
+/* CSS COde for Top Bar of YouTube Page */
+
+/* Top Bar CSS Code */
 .top-bar {
     display: flex;
     flex-direction: row;
@@ -15,7 +18,7 @@
     z-index: 1;
 }
 
-
+/* Left Section CSS Code */
 .left-section {
     display: flex;
     align-items: center;
@@ -25,6 +28,7 @@
     flex-shrink: 0;
 }
 
+/* Middle Section CSS code */
 .middle-section {
     display: flex;
     align-items: center;
@@ -35,6 +39,7 @@
     max-width: 465px;
 }
 
+/* Search bar CSS code */
 .search-bar {
     height: 36px;
     padding-left: 15px;
@@ -54,6 +59,7 @@
     color: rgb(124, 124, 124);
 }
 
+/* Right Section CSS Code */
 .right-section {
     display: flex;
     justify-content: space-between;
@@ -63,6 +69,7 @@
     flex-shrink: 0;
 }
 
+/* Top Bar Icons CSS Code */
 .upload-icon,
 .youtube-app-icon,
 .notification-icon,
@@ -74,6 +81,7 @@
     border-radius: 20px;
 }
 
+/* Hamburder menu CSS code */
 .hamburger-menu {
     margin-left: -5px;
     padding: 5px;
@@ -82,6 +90,7 @@
     border-radius: 20px;
 }
 
+/* YouTube Logo CSS Code */
 .youtube-logo {
     width: 110px;
     cursor: pointer;
@@ -96,6 +105,7 @@
     background-color: rgb(245, 245, 245);
 }
 
+/* Search Button CSS Code CSS Code */
 .search-button {
     border: solid;
     border-color: rgb(206, 206, 206);
@@ -119,6 +129,7 @@
     cursor: pointer;
 }
 
+/* Profile Channel Picture CSS Code */
 .my-profile-picture {
     width: 32px;
     border-radius: 16px;
