--- a/Assignment-2/youtube-files/styles/video.css
+++ b/Assignment-2/youtube-files/styles/video.css
@@ -1,3 +1,6 @@
+/* CSS code for Main Video content for YouTube Page  */
+
+/* Video Page CSS Code*/
 .video-page {
     margin-left: 100px;
     margin-right: 50px;
@@ -23,24 +26,10 @@
     cursor: pointer;
 }
 
+/* Recomended Video Thumbnail CSS Code */
 .reco-vid-thumbnail {
     display: inline;
     position: relative;
-}
-
-.time-count {
-    background-color: rgba(39, 39, 39, 0.90);
-    color: white;
-    position: absolute;
-    font-family: Roboto, Arial;
-    font-size: 12px;
-    font-weight: 500;
-    border-radius: 5px;
-    padding: 4px;
-    right: 10px;
-    bottom: 28px;
-
-
 }
 
 .reco-vid-thumbnail img {
@@ -51,6 +40,20 @@
     cursor: pointer;
 }
 
+/* Recomended Video duration CSS Code */
+.time-count {
+    background-color: rgba(39, 39, 39, 0.90);
+    color: white;
+    position: absolute;
+    font-family: Roboto, Arial;
+    font-size: 12px;
+    font-weight: 500;
+    border-radius: 5px;
+    padding: 4px;
+    right: 10px;
+}
+
+/* Video Title CSS Code */
 .video-title {
     font-size: 20px;
     margin-top: 10px;
@@ -68,11 +71,13 @@
     align-items: center;
 }
 
+/* Like-Dislike section CSS Code */
 .like-dislike-button {
     display: flex;
 
 }
 
+/* Share, Download, Like, Dislike Button CSS Code */
 .share-button,
 .download-button,
 .like-button,
@@ -134,6 +139,8 @@
     background-color: rgb(217, 2, 2);
 }
 
+
+/* Recomended Video Discription CSS Code */
 .reco-vid-title,
 .author-name,
 .author-subscribers,
