--- a/Assignment-1/styles/top-bar.css
+++ b/Assignment-1/styles/top-bar.css
@@ -6,9 +6,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.65);
-    padding-right: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px 30px 20px;
     position: fixed;
     right: 0;
     left: 0;
