--- a/Assignment-2/YT-Music-files/styles/main-content.css
+++ b/Assignment-2/YT-Music-files/styles/main-content.css
@@ -62,8 +62,7 @@ audio {
     border-radius: 5px;
     padding: 5px 10px;
     font-size: 16px;
-    margin-left: 10px;
-    margin-bottom: 10px;
+    margin: 0px 0px 10px 10px;
 
 }
 
