--- a/Assignment-2/YT-Music-files/styles/top-bar.css
+++ b/Assignment-2/YT-Music-files/styles/top-bar.css
@@ -34,8 +34,7 @@
     align-items: center;
     flex: 1;
     height: 40px;
-    margin-left: 60px;
-    margin-right: 10px;
+    margin: 0px 10px 60px;
     max-width: 465px;
 }
 
