--- a/Assignment-2/youtube-files/styles/top-bar.css
+++ b/Assignment-2/youtube-files/styles/top-bar.css
@@ -34,8 +34,7 @@
     align-items: center;
     flex: 1;
     height: 40px;
-    margin-left: 60px;
-    margin-right: 10px;
+    margin: 0px 10px 0px 60px;
     max-width: 465px;
 }
 
@@ -43,9 +42,7 @@
 .search-bar {
     height: 36px;
     padding-left: 15px;
-    border: solid;
-    border-width: 1px;
-    border-color: rgb(212, 212, 212);
+    border: solid 1px rgb(212, 212, 212);
     flex: 1;
     font-size: 16px;
     width: 0;
@@ -107,10 +104,8 @@
 
 /* Search Button CSS Code CSS Code */
 .search-button {
-    border: solid;
-    border-color: rgb(206, 206, 206);
+    border: solid 1px rgb(206, 206, 206);
     background-color: rgb(245, 245, 245);
-    border-width: 1px;
     margin-left: -1px;
     height: 40px;
     width: 65px;
