--- a/Assignment-2/youtube-files/styles/video.css
+++ b/Assignment-2/youtube-files/styles/video.css
@@ -2,9 +2,7 @@
 
 /* Video Page CSS Code*/
 .video-page {
-    margin-left: 100px;
-    margin-right: 50px;
-    margin-top: 80px;
+    margin: 80px 50px 0px 100px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 40px;
@@ -82,9 +80,7 @@
 .download-button,
 .like-button,
 .dislike-button {
-    padding: 9px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 9px 16px 9px 16px;;
     border-radius: 18px;
     border: none;
     font: Roboto, Arial;
@@ -100,10 +96,7 @@
 .download-button:hover,
 .like-button:hover,
 .dislike-button:hover {
-    border: solid;
-    border-width: 2px;
-    border-color: rgb(163, 163, 163);
-
+    border: solid px rgb(163, 163, 163);
 }
 
 .like-button {
@@ -114,17 +107,13 @@
 .dislike-button {
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
-    border-left: solid;
-    border-width: 1px;
-    border-color: rgb(201, 201, 201);
+    border-left: solid 1px rgb(201, 201, 201);
 }
 
 .subscribe-button {
     margin-left: 20px;
     font-size: 15px;
-    padding: 9px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 9px 16px 9px 16px;
     border-radius: 18px;
     border: none;
     font: Roboto, Arial;
@@ -133,6 +122,7 @@
     color: white;
     cursor: pointer;
     transition: 0.15s;
+    align-content: center;
 }
 
 .subscribe-button:hover {
