attempt to change duration

--- a/Assignment-2/youtube-files/styles/video.css
+++ b/Assignment-2/youtube-files/styles/video.css
@@ -26,7 +26,7 @@
 
 /* Recomended Video Thumbnail CSS Code */
 .reco-vid-thumbnail {
-    display: inline;
+    display: inline-block;
     position: relative;
 }
 
