--- a/Assignment-2/login register files/styles/style.css
+++ b/Assignment-2/login register files/styles/style.css
@@ -32,14 +32,14 @@ header {
 
 .logo {
     font-size: 2em;
-    color: white;
+    color: #270900;
     user-select: none;
 }
 
 .top-bar a {
     position: relative;
     font-size: 1.1em;
-    color: white;
+    color: #270900;
     text-decoration: none;
     font-weight: 500;
     margin-left: 40px;
@@ -51,7 +51,7 @@ header {
     position: absolute;
     width: 100%;
     height: 3px;
-    background: white;
+    background: #270900;
     border-radius: 5px;
     left: 0;
     bottom: -6px;
@@ -68,12 +68,12 @@ nav button {
     width: 130px;
     height: 50px;
     background: transparent;
-    border: 2px solid white;
+    border: 2px solid #270900;
     outline: none;
     border-radius: 6px;
     cursor: pointer;
     font-size: 1.1em;
-    color: white;
+    color: #270900;
     font-weight: 500;
     margin-left: 40px;
     transition: 0.15s;
@@ -81,40 +81,38 @@ nav button {
 }
 
 nav button:hover {
-    background-color: white;
-    color: #162938;
+    background-color: #270900;
+    color: #fcd473;
 }
 
 .wrapper {
     position: relative;
     width: 400px;
-    height: 440px;
-    background: transparent;
+    height: 420px;
+    background-color: rgba(225, 225, 225, .1);
     border: 2px solid rgba(225, 225, 225, .5);
     border-radius: 20px;
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+    backdrop-filter: blur(50px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, .9);
     display: flex;
     justify-content: center;
     align-items: center;
-    /* overflow: hidden;*/
+    overflow: hidden;
     transition: height .2s ease;
 }
-.wrapper .icon-close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 45px;
-    height: 45px;
-    background: #162938;
-    font-size: 2em;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom-left-radius: 20px;
-    z-index: 1;
-    cursor: pointer;
+
+.wrapper.active {
+    height: 730px;
+}
+
+.wrapper .form-box.login {
+    transition: transform .18s ease;
+    transform: translateX(0);
+}
+
+.wrapper.active .form-box.login {
+    transition: none;
+    transform: translateX(-400px);
 }
 
 .wrapper .form-box {
@@ -123,19 +121,20 @@ nav button:hover {
 
 }
 
-.wrapper .form-box.login {
-    /* display: none; */
-
-}
-
 .wrapper .form-box.register {
     position: absolute;
+    transition: none;
     transform: translateX(400px);
+}
+
+.wrapper.active .form-box.register {
+    transition: transform .18s ease;
+    transform: translateX(0);
 }
 
 .form-box h2 {
     font-size: 2em;
-    color: #162938;
+    color: #270900;
     text-align: center;
 }
 
@@ -143,7 +142,7 @@ nav button:hover {
     position: relative;
     width: 100%;
     height: 50px;
-    border-bottom: 2px solid #162938;
+    border-bottom: 2px solid #270900;
     margin: 30px 0px;
 }
 
@@ -153,7 +152,7 @@ nav button:hover {
     left: 5px;
     transform: translateY(-50%);
     font-size: 1em;
-    color: #162938;
+    color: #270900;
     font-weight: 500;
     pointer-events: none;
     transition: .2s;
@@ -177,13 +176,13 @@ nav button:hover {
     position: absolute;
     right: 8px;
     font-size: 1.2em;
-    color: #162938;
+    color: #270900;
     line-height: 57px;
 }
 
 .remember-forgot {
     font-size: .9em;
-    color: #162938;
+    color: #270900;
     font-weight: 500;
     margin: -15px 0 15px;
     display: flex;
@@ -191,12 +190,12 @@ nav button:hover {
 }
 
 .remember-forgot label input {
-    accent-color: #162938;
+    accent-color: #270900;
     margin-right: 3px;
 }
 
 .remember-forgot a {
-    color: #162938;
+    color: #270900;
     text-decoration: none;
     font-weight: 600;
 
@@ -209,20 +208,20 @@ nav button:hover {
 .btn {
     width: 100%;
     height: 45px;
-    background-color: #162938;
+    background-color: #270900;
     border: none;
     outline: none;
     border-radius: 6px;
     cursor: pointer;
     font-size: 1em;
-    color: white;
+    color: #fcd473;
     font-weight: 500;
 
 }
 
 .login-register {
     font-size: 0.9em;
-    color: #162938;
+    color: #270900;
     text-align: center;
     font-weight: 500;
     margin: 25px 0 10px;
@@ -231,7 +230,7 @@ nav button:hover {
 
 .login-register p a {
     text-decoration: none;
-    color: #162938;
+    color: #270900;
     font-weight: 600;
 
 }
